--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -7,3 +7,4 @@ deployment:
     - /bin/cp -R js $DEPLOYPATH
     - /bin/cp -R scss $DEPLOYPATH
     - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp blog.html $DEPLOYPATH
